fixed embed alignment in the post editor

--- a/sass/editor-style.scss
+++ b/sass/editor-style.scss
@@ -207,7 +207,7 @@ img,
   border-left: none;
 }
 .wp-block-embed {
-  margin: $baseline-height 0;
+  margin: $baseline-height auto;
 }
 .has-small-font-size {
   font-size: 12px;
